<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <Button
        android:id="@+id/btnReturnToRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="⟲"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="✅"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etAddRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/btnReturnToRecipes" />

    <EditText
        android:id="@+id/etAddRecipeServings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/servings"
        android:inputType="number"
        android:digits="0123456789"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/etAddRecipeTitle" />

    <EditText
        android:id="@+id/etAddRecipeCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/cal_per_serving"
        android:inputType="number"
        android:digits="0123456789"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/etAddRecipeServings" />

    <TextView
        android:id="@+id/tvAddRecipeIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddRecipeCalories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddRecipeIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAddRecipeIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAddIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAddRecipeIngredients" />

    <TextView
        android:id="@+id/tvAddRecipeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddIngredient" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddRecipeInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAddRecipeInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAddInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAddRecipeInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>